<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.furkancetin.parksolutions.parksolutions.MainActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/firstPanel"
        android:layout_marginBottom="265dp"
        android:background="@color/colorAccent"
        android:padding="10dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/box_title"
            android:id="@+id/box_title"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center_horizontal|top"
            android:textSize="25dp"
            android:gravity="center_horizontal" />

        <ImageView
            android:layout_width="155dp"
            android:layout_height="155dp"
            android:id="@+id/park_green"
            android:background="@drawable/park_green"
            android:layout_gravity="left|center_vertical"
            android:layout_marginTop="15dp" />

        <ImageView
            android:layout_width="155dp"
            android:layout_height="155dp"
            android:id="@+id/park_red"
            android:background="@drawable/park_red"
            android:layout_gravity="right|center_vertical"
            android:layout_marginTop="15dp" />
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignTop="@+id/firstPanel"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="275dp"
        android:id="@+id/secondPanel"
        android:background="@color/colorAccent"
        android:padding="10dp">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/panel_text_1"
            android:id="@+id/panel_text_1"
            android:layout_gravity="center_horizontal|top"
            android:layout_marginTop="10dp"
            android:gravity="center_horizontal"
            android:textSize="20dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/available_places"
            android:id="@+id/available_places"
            android:layout_gravity="center_horizontal|top"
            android:gravity="center_horizontal"
            android:layout_marginTop="50dp"
            android:textSize="35dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/panel_text_2"
            android:id="@+id/panel_text_2"
            android:layout_gravity="center_horizontal|top"
            android:layout_marginTop="95dp"
            android:gravity="center_horizontal"
            android:textSize="20dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/available_places_total"
            android:id="@+id/available_places_total"
            android:layout_gravity="center_horizontal|top"
            android:gravity="center_horizontal"
            android:layout_marginTop="125dp"
            android:textSize="35dp" />
    </FrameLayout>

    <!--android:layout_alignRight="@+id/frameLayout"-->
    <!--android:layout_alignEnd="@+id/frameLayout"-->
</RelativeLayout>
